[tool.poetry]
name = "youshen"
version = "0.1.0"
description = "Poem generator built on GPT-2"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.6"
fastapi = "^0.61.2"
streamlit = "^0.71.0"
pronouncing = "^0.2.0"
numpy = "^1.19.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
