[tool.poetry]
name = "youshen"
version = "0.1.0"
description = "Poem generator built on GPT-2"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.6"
fastapi = "^0.61.2"
streamlit = "^0.71.0"
pronouncing = "^0.2.0"
numpy = "^1.19.4"
emails = "^0.6"
boto3 = "^1.16.26"
python-dotenv = "^0.15.0"
fire = "^0.3.1"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
pylint = "^2.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
